	modified:   ZGame/game_tutorials/Win32/Full Screen/FullScreen.cpp
	modified:   ZGame/game_tutorials/Win32/HBRUSH/win_main.cpp
	modified:   ZGame/game_tutorials/Win32/HPEN/win_main.cpp
	modified:   ZGame/game_tutorials/Win32/Horizontal Scroll Bar/win_main.cpp
	modified:   ZGame/game_tutorials/Win32/Menus Part2/win_main.cpp
	modified:   ZGame/game_tutorials/Win32/Menus/Menu.cpp
	modified:   ZGame/game_tutorials/Win32/Mouse Input Part2/win_main.cpp
	modified:   ZGame/game_tutorials/Win32/Mouse Input/win_main.cpp

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/06/05.17_53_43.54.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
gt.2015-06-06.22_37_44.69.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/game_tutorials/Win32/Displaying Multiple Bitmaps/Bitmap.cpp
	modified:   ZGame/game_tutorials/Win32/Displaying Multiple Bitmaps/Bitmap.h
	modified:   ZGame/game_tutorials/Win32/Displaying Multiple Bitmaps/DisplayBitmaps.cpp
	modified:   ZGame/game_tutorials/Win32/Double Buffering/win_main.cpp
	modified:   ZGame/game_tutorials/Win32/Moving a Bitmap/DisplayBitmaps.cpp
	modified:   ZGame/game_tutorials/Win32/Text Blitter/win_main.cpp

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/06/08.18_03_54.16.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	modified:   ZGame/game_tutorials/Win32/Map Editor/Init.cpp
	modified:   ZGame/game_tutorials/Win32/Map Editor/Tile.h
