@@ -59,9 +59,10 @@
        Zcl_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
        Zcl_E : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      Zndex_S : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Zndex_E : //z 2015-06-05 17:33:48 L.209'23172 T2926574811.K ~343 +----+----+----+----+----+
-     TimeCnt : //z 2015-06-05 17:33:06 L.209'23214 T2926574677.K ~13  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-06-05 17:33:01 L.209'23219 T2926574672.K ~18  +----+----+----+----+----+
+     Zndex_E : //z 2015-06-09 11:02:15 L.205'46665 T4035313295.K ~352 +----+----+----+----+----+
+     TimeCnt : //z 2015-06-09 11:00:50 L.205'46750 T4035241548.K ~14  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-06-09 11:00:48 L.205'46752 T4035241523.K ~19  +----+----+----+----+----+
+     #19  R+ : //z 2015-06-09 11:00:48 L.205'46752 T4035241523.K ~19    V+.363  L+.380  
      #18  R+ : //z 2015-06-05 17:33:01 L.209'23219 T2926574672.K ~18    V+.354  L+.368  
      #17  R+ : //z 2015-06-04 16:18:43 L.210'27677 T1565113303.K ~17    V+.334  L+.354  
      #16  R+ : //z 2015-05-28 17:45:17 L.217'22483 T1979531806.K ~16    V+.295  L+.337  
@@ -81,7 +82,8 @@
      #2   R+ : //z 2015-04-27 11:31:41 L.248'44899 T1419899214.K ~2     V+.19   L+.104  
      #1   R+ : //z 2015-04-27 11:28:08 L.248'45112 T1418964727.K ~1     V+.3    L+.62   
      File.Op : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     Version : //z 2015-06-05 17:33:48 L.209'23172 T2926574811.K ~361   R+.18   L+.373  --+----+
+     Version : //z 2015-06-09 11:02:15 L.205'46665 T4035313295.K ~371   R+.19   L+.383  --+----+
+     #19  R+ : //z 2015-06-09 11:00:48 L.205'46752 T4035241523.K ~363   R+.19   L+.381  V+.363  
      #19  V+ : //z 2015-06-05 17:33:48 L.209'23172 T2926574811.K ~361   R+.18   L+.373  
      #18  R+ : //z 2015-06-05 17:33:01 L.209'23219 T2926574672.K ~354   R+.18   L+.369  V+.354  
      #18  V+ : //z 2015-06-04 16:19:29 L.210'27631 T1565149180.K ~342   R+.17   L+.357  
@@ -373,3 +375,10 @@ http://trac.openscenegraph.org/projects/osg//wiki/Community/Plugins
 http://sourceforge.net/p/osgmaxexp/news/
 http://sourceforge.net/p/osgmaxexp/code/HEAD/tree/
 #endregion //z 2015-06-05 17:33:01 L.209'23219 BG57IV3@XCL T2926574672.K.F4146951713-+----+----+
+
+#region 06-09 11:00 R#.19   @znote BookList
+01. 
+//z 2015-06-09 11:00:50 L.205'46750 T4035241548.K[T14,L381,R19,V365]
+05-25 12:54 todo 深入理解nginx redis设计与实现
+
+#endregion //z 2015-06-09 11:00:48 L.205'46752 BG57IV3@XCL T4035241523.K.F4146951713-+----+----+
